# lunch

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/docker/: postgresql.yml
backend/examples/: payload.rs  request.rs
backend/src/: builder.rs  error.rs  lib.rs  main.rs  setup.rs
backend/src/ar/: mod.rs
backend/src/entity/: mod.rs  payload.rs  post.rs  user.rs
backend/src/handler/: mod.rs  project.rs  user.rs
backend/src/model/: claims.rs  mod.rs  user.rs
backend/src/omaha/: handler.rs  mod.rs  model.rs  server.rs
backend/src/service/: claims.rs  mod.rs  user.rs
backend/templates/: code.j2  normal.xml  update.xml
docker/: postgres.yml
docs/: request8response.md
front/: .env  Cargo.toml  README.md  craco.config.js  index.scss  package.json
front/src/: App.css  App.tsx  authenticated-app.tsx  error.rs  errors.rs  index.tsx  main.rs  pages.rs
front/src/components/: lib.tsx  mod.rs
front/src/hooks/: mod.rs  use_user_context.rs
front/src/pages/: home.rs  payload.rs  upload.rs
front/src/routes/: login.rs
front/src/screens/project-list/: list.tsx  search-panel.tsx
front/src/services/: auth.rs  mod.rs  requests.rs
front/src/types/: auth.rs  mod.rs
front/src/unauthenticated-app/: index.tsx  login.tsx  register.tsx
front/src/utils/: index.ts
static-file-server/: .env  Cargo.toml
static-file-server/examples/: ip.rs
static-file-server/my-app/: .env  .env.development  package.json
static-file-server/my-app/src/: App.tsx
static-file-server/my-app/src/screen/: index.tsx
static-file-server/src/: error.rs  main.rs
static-file-server/templates/: list.html
