[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
axum = "0.4.4"
dotenv = "0.15.0"
serde = "1.0.135"
serde_json = "1.0.78"
tera = "1.15.0"
tokio = { version = "1.15.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.1", features = ["fs"] }
tower-cookies = "0.4.1"
tracing-subscriber = "0.3.6"
chrono = { version = "0.4.19", features = ["serde"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
tracing = "0.1.29"

[dependencies.sea-orm]
version = "^0.5.0"
features = ["macros", "runtime-tokio-native-tls", "debug-print"]
default-features = false

[features]
default = ["sqlx-postgres"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
