[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.6.0"
gloo-file = "0.2.0"
js-sys = "0.3.56"
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.11.2"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3.56", features = ["File", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
yew = "0.19.3"
yew-router = "0.16.0"


